--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,1 +1,10 @@
-
+steps:
+  mtaBuild:
+    buildTarget: 'NEO'
+    MTA_HOME: '/opt/sap/mta/lib/mta.jar'
+  neoDeploy:
+    NEO_HOME: '/opt/sap/neo-sdk/'
+    neo:
+      credentialsId: 'NEO_DEPLOY'
+      host: 'hana.ondemand.com'
+      account: 'p1941901743trial'        
