--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -3,7 +3,7 @@ steps:
     buildTarget: 'NEO'
     MTA_HOME: '/opt/sap/mta/lib/mta.jar'
   neoDeploy:
-    NEO_HOME: '/opt/sap/neo-sdk/'
+    NEO_HOME: '/home/jenkins/NEO_HOME'
     neo:
       credentialsId: 'CI_CREDENTIALS_ID'
       host: 'eu1.hana.ondemand.com'
