--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -5,6 +5,6 @@ steps:
   neoDeploy:
     NEO_HOME: '/home/jenkins/NEO_HOME'
     neo:
-      credentialsId: 'CI_CREDENTIALS_ID'
-      host: 'eu1.hana.ondemand.com'
-      account: 'a533b9d89'        
+      credentialsId: 'NEO_DEPLOY'
+      host: 'hana.ondemand.com'
+      account: 'p1942404349trial'        
