--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -6,5 +6,5 @@ steps:
     NEO_HOME: '/opt/sap/neo-sdk/'
     neo:
       credentialsId: 'NEO_DEPLOY'
-      host: 'hana.ondemand.com'
+      host: 'hanatrial.ondemand.com'
       account: 'p1942404349trial'        
